fix: char-note background in dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,7 +81,7 @@
 }
 
 .dark {
-  --theme-color: rgb(163, 31, 36);
+  --theme-color: rgb(194, 37, 37);
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
